# KernelProcessing

./: CMakeLists.txt  Channel.cpp  Channel.h  Image.cpp  Image.h  ImageBase.h  ImageProcessor.cpp  ImageProcessor.h  Kernel.h  Kernels.h  README.md  main.cpp
images/: curve.ppm  lena_new.pgm  lennanew.pgm  monaLisa_sharpened.pgm  monalisa_blurred.pgm  output.pgm  output.ppm  under_blur.pgm
media/input/: lena.ppm
media/output/: lena-blur.ppm  lena-blurF.ppm  lena-blurF77.ppm  lena-edge.ppm  lena-sharpen.ppm  lena-test.ppm  lena_edge-detect.ppm  lena_edge-detect1.ppm  lenacoloredchar.ppm  lenacoloredcharint.ppm  monaLisa_edge.pgm
src/: BlurCreator.h  Channel.h  EdgeCreator.h  Image.cpp  Image.h  ImageBase.h  ImageProcessor.cpp  ImageProcessor.h  Kernel.cpp  Kernel.h  KernelCreator.h  KernelProduct.h  SharpenCreator.h  main.cpp
tests/: ApplyKernel.cpp  CMakeLists.txt  Image.cpp  ImageBase.cpp  ImageProcessor.cpp  Kernel.cpp  KernelProduct.cpp
